@@ -34,6 +34,13 @@
 #define PJ_LIB__
 #include <projects.h>
 
+#ifndef M_PI
+#  define M_PI 3.14159265358979323846
+#endif
+#ifndef M_PI_2
+#  define M_PI_2 1.57079632679489661923
+#endif
+
 PJ_CVSID("$Id$");
 
 PROJ_HEAD(aitoff, "Aitoff") "\n\tMisc Sph";
